results/SVCOMP/2-shot/log-arrayread1-2024_03_18_22_51_55.txt
class arrayread1 {

  static arrayread1 readback;

  //@ ensures \result == -1 <==> c != 1;
  //@ ensures \result == 1 <==> c == 1 && readback == null;
  //@ ensures \result == 0 <==> c == 1 && readback != null;
  public static int func(int c) {
    if (c != 1) return -1;
    arrayread1[] a = new arrayread1[c];
    readback = a[0];
    return ((readback == null) ? 1 : 0);
  }
}
/home/max/Documents/JMLGPT/tmp/arrayread1.java:6: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result == 1 <==> c == 1 && readback == null;
                                          ^
/home/max/Documents/JMLGPT/tmp/arrayread1.java:7: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result == 0 <==> c == 1 && readback != null;
                                          ^
2 errors

